--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -1,4 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
+html, body { height: 100%; background-color: #E6E6EB;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.panel {
+  display: flex;
+  flex-direction: column;
+  .block {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1rem;
+  }
+}
+
+@media only screen and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
+  .panel {
+    display: flex;
+    flex-direction: column;
+    .block{
+      width: 95%;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 1rem;
+    }
+  }
+}
+
+.ico-w-text{
+  display: flex !important; flex-direction: row; align-items: center; justify-content: space-between;
+  .icon-ico{ margin-left: .25rem; margin-right: .25rem;}
+  .text-ico{margin-left: .25rem; margin-right: .25rem;}
+
+}
