--- a/angular/src/app/shared/blocks/task-block/task-block.component.html
+++ b/angular/src/app/shared/blocks/task-block/task-block.component.html
@@ -2,13 +2,13 @@
   <mat-card-title class="card-head">
     <span class="card-title">{{title}}</span>
     <small>{{date}}</small>
-    <button mat-icon-button class="" [matMenuTriggerFor]="menu" matTooltip="more options" aria-label="some button">
+    <button *ngIf="id" mat-icon-button class="" [matMenuTriggerFor]="menu" matTooltip="more options" aria-label="some button">
       <mat-icon>more_vert</mat-icon>
     </button>
   </mat-card-title>
   <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
   <mat-card-content>{{content}}</mat-card-content>
-  <mat-card-actions class="task-action-button">
+  <mat-card-actions class="task-action-button" *ngIf="id">
     <button *ngIf="!done" mat-mini-fab color="primary" matTooltip="mark done" (click)="markDone(id)"  aria-label="Example icon button with a filter list icon">
       <mat-icon>done</mat-icon>
     </button>
