--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -2,6 +2,10 @@
 html, body { height: 100%; background-color: #E6E6EB;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.d-flex{display:flex}
+.flex-row{flex-direction: row}
+.justify-content-center{justify-content: center}
+
 .panel {
   display: flex;
   flex-direction: column;
