added delete function call, removed delete from interface
was having issues with delete functions. removed button for now.

--- a/angular/src/app/modules/profile/components/profile/profile.component.html
+++ b/angular/src/app/modules/profile/components/profile/profile.component.html
@@ -25,11 +25,11 @@
       </mat-card-content>
     </mat-card>
   </div>
-  <div class="block">
-    <mat-card>
-      <mat-card-content>
-        <button mat-raised-button color="warn" (click)="deleteAccount()">Delete Account</button>
-      </mat-card-content>
-    </mat-card>
-  </div>
+<!--  <div class="block">-->
+<!--    <mat-card>-->
+<!--      <mat-card-content>-->
+<!--        <button mat-raised-button color="warn" (click)="deleteAccount()">Delete Account</button>-->
+<!--      </mat-card-content>-->
+<!--    </mat-card>-->
+<!--  </div>-->
 </div>
