task-list, finalize for pre-release

--- a/angular/src/app/modules/task-list/components/task-list/task-list.component.html
+++ b/angular/src/app/modules/task-list/components/task-list/task-list.component.html
@@ -43,7 +43,7 @@
                   [taskID]=""
                   [taskTitle]="'No Tasks Found!'"
                   [taskSubtitle]=""
-                  [taskContent]="'Click the back button to return to the available task lists'"
+                  [taskContent]="'Click the back button to return to the available task lists or click the plus to add one'"
                   [taskDone]=""
                   [taskDate]=""
                   class="block">
