final prep - deployment

--- a/angular/src/app/shared/toolbar/toolbar.component.html
+++ b/angular/src/app/shared/toolbar/toolbar.component.html
@@ -10,7 +10,7 @@
   </form>
   <div>
     <h1>Task Tracker</h1>
-    <small class="small">created by <a class="attribution-link" href="https://thomaspkovalchuk.com/" target="_blank" title="find other projects">tomakova</a></small>
+    <small class="small">created by <a rel="noopener" class="attribution-link" href="https://thomaspkovalchuk.com/" target="_blank" title="find other projects">tomakova</a></small>
   </div>
   <span class="spacer"></span>
   <button *ngIf="this.isUserLoggedIn" mat-icon-button class="" [matMenuTriggerFor]="menuOptions" matTooltip="more options" aria-label="show more options">
